--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@types/bootstrap": "^5.0.12",
+    "bootstrap": "^5.0.0-beta3",
+    "bootstrap-icons": "^1.4.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
@@ -72,7 +75,9 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {},
+    "rules": {
+      "indent": ["warn", 4]
+    },
     "overrides": [
       {
         "files": [
