--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.4.1",
     "core-js": "^3.6.5",
+    "debug": "^4.3.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
