--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap-icons": "^1.4.1",
     "core-js": "^3.6.5",
     "debug": "^4.3.1",
+    "howler": "^2.2.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
@@ -33,6 +34,7 @@
     "@types/bootstrap": "^5.0.12",
     "@types/chai": "^4.2.11",
     "@types/electron-devtools-installer": "^2.2.0",
+    "@types/howler": "^2.2.2",
     "@types/mocha": "^8.0.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
@@ -82,7 +84,8 @@
       "ecmaVersion": 2020
     },
     "rules": {
-      "indent": [
+      "indent": "off",
+      "@typescript-eslint/indent": [
         "warn",
         4
       ]
