--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "core-js": "^3.6.5",
     "debug": "^4.3.1",
     "howler": "^2.2.1",
+    "mdb-vue-ui-kit": "^1.0.0-beta3",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
