--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
   },
   "main": "background.js",
   "dependencies": {
-    "bootstrap": "^5.0.0-beta3",
+    "NeteaseCloudMusicApi": "^4.0.12",
+    "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.4.1",
-    "core-js": "^3.6.5",
+    "@popperjs/core": "^2.9.2",
     "debug": "^4.3.1",
     "howler": "^2.2.1",
-    "mdb-vue-ui-kit": "^1.0.0-beta3",
-    "NeteaseCloudMusicApi": "^4.0.10",
+    "mdb-vue-ui-kit": "^1.0.0-beta4",
     "vue": "^3.0.0",
-    "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
@@ -32,44 +31,21 @@
     "**/iconv-lite": "^0.6.2"
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.0.12",
-    "@types/chai": "^4.2.11",
+    "@types/bootstrap": "^5.0.13",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/howler": "^2.2.2",
-    "@types/mocha": "^8.0.1",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-e2e-webdriverio": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-mocha": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "@vue/test-utils": "^2.0.0-0",
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
-    "chromedriver": "^84.0.1",
-    "electron": "^12.0.0",
-    "electron-devtools-installer": "^3.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "lint-staged": "^9.5.0",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "spectron": "14.0.0",
-    "ts-node": "^8.10.2",
-    "typescript": "~3.9.3",
-    "vue-cli-plugin-electron-builder": "~2.0.0-rc.6",
-    "wdio-chromedriver-service": "^6.0.3"
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.0.0",
+    "@vitejs/plugin-vue": "^1.2.2",
+    "@vue/compiler-sfc": "^3.0.6",
+    "electron": "^12.0.6",
+    "electron-builder": "^22.11.1",
+    "electron-devtools-installer": "^3.2.0",
+    "eslint": "^7.0.0",
+    "eslint-plugin-vue": "^7.9.0",
+    "typescript": "^4.0.0",
+    "vite": "^2.2.4",
+    "vue-tsc": "^0.1.0"
   },
   "eslintConfig": {
     "root": true,
