--- a/package.json
+++ b/package.json
@@ -3,22 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "dev": "node scripts/dev.js",
+    "lint": "eslint . --ext js,ts,vue"
   },
   "main": "background.js",
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "NeteaseCloudMusicApi": "^4.0.12",
     "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.4.1",
-    "@popperjs/core": "^2.9.2",
     "debug": "^4.3.1",
     "howler": "^2.2.1",
     "mdb-vue-ui-kit": "^1.0.0-beta4",
@@ -30,14 +23,19 @@
   "resolutions": {
     "**/iconv-lite": "^0.6.2"
   },
+  "@comment devDependencies": {
+    "@types/wicg-mediasession": "See: https://github.com/Microsoft/TypeScript/issues/19473"
+  },
   "devDependencies": {
     "@types/bootstrap": "^5.0.13",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/howler": "^2.2.2",
+    "@types/wicg-mediasession": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.0.0",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.6",
+    "chalk": "^4.1.0",
     "electron": "^12.0.6",
     "electron-builder": "^22.11.1",
     "electron-devtools-installer": "^3.2.0",
@@ -46,51 +44,5 @@
     "typescript": "^4.0.0",
     "vite": "^2.2.4",
     "vue-tsc": "^0.1.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "@vue/standard",
-      "@vue/typescript/recommended"
-    ],
-    "parserOptions": {
-      "ecmaVersion": 2020
-    },
-    "rules": {
-      "indent": "off",
-      "@typescript-eslint/indent": [
-        "warn",
-        4
-      ]
-    },
-    "overrides": [
-      {
-        "files": [
-          "**/__tests__/*.{j,t}s?(x)",
-          "**/tests/unit/**/*.spec.{j,t}s?(x)"
-        ],
-        "env": {
-          "mocha": true
-        }
-      }
-    ]
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ],
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,vue,ts,tsx}": [
-      "vue-cli-service lint",
-      "git add"
-    ]
   }
 }
