--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "node scripts/dev.js",
     "lint": "eslint . --ext js,ts,vue"
   },
-  "main": "background.js",
+  "main": "src/main/dist/index.cjs",
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "NeteaseCloudMusicApi": "^4.0.12",
@@ -41,6 +41,7 @@
     "electron-devtools-installer": "^3.2.0",
     "eslint": "^7.0.0",
     "eslint-plugin-vue": "^7.9.0",
+    "sass": "^1.32.12",
     "typescript": "^4.0.0",
     "vite": "^2.2.4",
     "vue-tsc": "^0.1.0"
