--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "yanc",
   "version": "0.1.0",
-  "private": true,
+  "license": "GPL-3.0",
+  "description": "Yet another netease cloudmusic",
+  "repository": "github:cjc7373/yanc",
   "scripts": {
     "dev": "node scripts/dev.js",
     "lint": "eslint . --ext js,ts,vue"
@@ -35,7 +37,6 @@
     "@typescript-eslint/parser": "^4.0.0",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.6",
-    "chalk": "^4.1.0",
     "electron": "^12.0.6",
     "electron-builder": "^22.11.1",
     "electron-devtools-installer": "^3.2.0",
